segundo commit de la pagina

--- a/paginaPrueba.html
+++ b/paginaPrueba.html
@@ -5,16 +5,25 @@
 
 <head>
 
+    <title>Agenda de empleados</title>
+
 </head>
 
-<title>
-
-
-
-</title>
 
 <body>
 
+
+    <h1>Hola mundo</h1>
+    <p>Este es mi primer parrafo</p>
+    <p>Puedes buscar más información en <a href="https://www.google.com">Google</a>.</p>
+    <p>Visita nuestra <a href="contacto.html">página de contacto</a>.</p>
+
+    <figure>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="Logo de HTML5" width="150">
+
+    <img src="C:\Users\gecio\Downloads\perfil.JPG">
+
+    </figure>
 
     
 </body>
