--- a/paginaPrueba.html
+++ b/paginaPrueba.html
@@ -9,6 +9,8 @@ asi como enlaces a otras hojas de estilo o a scripts, es la parte tipo librerias
 
 <head>
     <title>Expedientes de Empleados</title>
+    <link rel="stylesheet" href="pagina_prueba.css">
+
 </head>
 
 
