notas de formularios en boton

--- a/paginaPrueba.html
+++ b/paginaPrueba.html
@@ -37,6 +37,7 @@ asi como enlaces a otras hojas de estilo o a scripts, es la parte tipo librerias
         <!--el alt es por si no carga la imagen-->
 
         <!--width es perfecto para ajustar la imagen de tamaño en relacion a su tamaño original-->
+        <!--Se tiene que copiar la direccion de la imagen para que se copie si esta esta en internet-->
             <img src="https://i.pinimg.com/736x/60/72/72/607272cac99fa41508d0f6aec5dce327.jpg" alt="Empleados" width="200">
             
         <!--podemos agregar una direccion a redirigir con el figcaption-->
