Practica de funciones

--- a/boton.html
+++ b/boton.html
@@ -78,3 +78,48 @@
 
 </body>
 </html>
+
+
+
+<!--
+
+Formulario-. manda datos a un archivo
+from action ---adonde voy a mandar los datos que voy a colocar en el mismo  method = indico al formulario que metodo uso para el envio    get   post
+
+se tiene meter un enctype para el emvio de archivos 
+
+get amnda los datos por medio de la url  -- vana a ser visibles al usaio
+post -- migro los datos pero no son visibles por e; usaio hay que extraerlos son mas seguros que el get 
+
+
+elemenots del formulario
+input   entrada de tipo de datos , se puede limitar el tipo de dato que se manda   
+selects 
+radio put downs 
+checks 
+
+con las restriccion es reuires es de a fuerzas colocar algo en esa parte del formulario
+
+muchas de las comparaciones realizan con java script :)
+
+
+
+se pueden masndar distitos tipos de datos a traves del formualrio ej pdfs 
+
+agragr un bptn submit siempre para el formulario
+se pueden hacer validaciones previas antes que los mande el usuario
+
+
+
+
+
+-->
+
+
+
+
+<!--
+
+
+
+-->
