--- a/paginaPrueba.html
+++ b/paginaPrueba.html
@@ -54,7 +54,7 @@ asi como enlaces a otras hojas de estilo o a scripts, es la parte tipo librerias
 <!--se inserta una linea horizontal-->
     <hr>
 
-<!--esta etiqueta se usa para definir el contenido PRINCIPAL de la pagina-->
+<!--esta etiqueta se usa para definir el contenido PRINCIPAL de la paginaf -->
     <main>
 
 
